Added the corner case of list of investment if not found

--- a/MoneyApp/src/app/investment-details/investment-details.component.html
+++ b/MoneyApp/src/app/investment-details/investment-details.component.html
@@ -1,22 +1,26 @@
 <div class="container">
-        <div class="table-responsive-lg">
-        <h2>Investments Details</h2>
-        <table class="table">
-          <thead class="thead-dark">
-            <tr>
-              <th>Investment Name</th>
-              <th>Investment Type</th>
-              <th>Investment Amount</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let investment of investmentList">
-              <td>{{ investment.investmentName }}</td>
-              <td>{{ investment.investmentType }}</td>
-              <td>{{ investment.investmentAmount | currency:"₹ "}}</td>
-            </tr>
-          </tbody>
-        </table>
+  <div class="table-responsive-lg">
+    <h2>Investments Details</h2>
+    <table class="table">
+      <thead class="thead-light">
+        <tr *ngIf="!isListAvailable">
+          <th>
+            No Investments are done till date. Please invest in yourself...
+          </th>
+        </tr>
+        <tr *ngIf="isListAvailable">
+          <th>Investment Name</th>
+          <th>Investment Type</th>
+          <th>Investment Amount</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let investment of investmentList">
+          <td>{{ investment.investmentName }}</td>
+          <td>{{ investment.investmentType }}</td>
+          <td>{{ investment.investmentAmount | currency: "₹ " }}</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
-      </div>
-      
