--- a/MoneyApp/src/app/navbar/navbar.component.html
+++ b/MoneyApp/src/app/navbar/navbar.component.html
@@ -1,30 +1,43 @@
-
-
 <!-- Grey with black text -->
 <nav class="navbar navbar-expand-sm bg-warning navbar-light">
-    <div class="container-fluid">
+  <div class="container-fluid">
     <ul class="navbar-nav">
-        <div class="spinner-grow text-success"></div>
-        <div class="spinner-grow text-info"></div>
-        <div class="spinner-grow text-danger"></div>
-        
+      <div class="spinner-grow text-success"></div>
+      <div class="spinner-grow text-info"></div>
+      <div class="spinner-grow text-danger"></div>
+
       <li class="nav-item active">
         <a class="nav-link" href="#">PaisaInvesto</a>
-        
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="add-investment" routerLinkActive="active">Add Investment</a>
+        <a
+          class="nav-link"
+          routerLink="add-investment"
+          routerLinkActive="active"
+          >Add Investment</a
+        >
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="investment-details">Investment Details</a>
+        <a class="nav-link" routerLink="add-income">Add Income</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="investment-details"
+          >Investment Details</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="income-details">Income Details</a>
       </li>
     </ul>
 
     <ul class="nav navbar-nav navbar-right">
-      
-        <button class="btn btn-danger navbar-btn" routerLink="signup-form">Signup</button>
-        &nbsp;&nbsp;
-        <button class="btn btn-success navbar-btn" routerLink="login-form">Login</button>
-      </ul>
-      </div>
-  </nav>
+      <button class="btn btn-danger navbar-btn" routerLink="signup-form">
+        Signup
+      </button>
+      &nbsp;&nbsp;
+      <button class="btn btn-success navbar-btn" routerLink="login-form">
+        Login
+      </button>
+    </ul>
+  </div>
+</nav>
