--- a/MoneyApp/src/app/income-details/income-details.component.html
+++ b/MoneyApp/src/app/income-details/income-details.component.html
@@ -38,6 +38,17 @@
             </button>
           </td>
         </tr>
+        <tr *ngIf="isListAvailable" style="color:darkmagenta">
+          <td></td>
+          <td><b>Total Income:</b></td>
+          <td>
+            <b
+              ><i>{{ sumOfIncome | currency: "₹ " }}</i></b
+            >
+          </td>
+          <td></td>
+          <td></td>
+        </tr>
       </tbody>
     </table>
   </div>
